--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "to-do-list",
+  "homepage": "https://julianver200.github.io/To-Do-List-React/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.1",
